Side Sections Overlapping Issue

--- a/src/components/css/body.css
+++ b/src/components/css/body.css
@@ -106,3 +106,10 @@
     }
     
 }
+
+@media(max-width: 775px) {
+    .social-list {
+        list-style-type: none;
+        margin-left: -20px
+    }
+}
